--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,11 +17,11 @@ jobs:
 #      - run: echo "🍏 This job's status is ${{ job.status }}."
 
 
-      - name: Add PWD to pythonpath
-        run: |
-          echo 'PYTHONPATH<<EOF' >> $GITHUB_ENV
-          echo $(pwd) >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
+#      - name: Add PWD to pythonpath
+#        run: |
+#          echo 'PYTHONPATH<<EOF' >> $GITHUB_ENV
+#          echo $(pwd) >> $GITHUB_ENV
+#          echo 'EOF' >> $GITHUB_ENV
 
       - name: run pytest
         - run: |
