--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: run pytest
         run: |
-            - pip install pytest
-            - pytest .
+            pip install pytest
+            pytest .
 
       - name: run black
         run: |
