--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,6 +26,7 @@ jobs:
       - name: run pytest
         run: |
             pip install pytest
+            export PYTHONPATH=$(pwd)
             pytest .
 
       - name: run black
