--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,12 +23,16 @@ jobs:
 #          echo $(pwd) >> $GITHUB_ENV
 #          echo 'EOF' >> $GITHUB_ENV
 
-      - name: run pytest
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
         run: |
-            pip install pytest
-            python -m pytest
-
-      - name: run black
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest, black
+      - name: Test with pytest
         run: |
-          pip install black
-          black .
+          python -m pytest
