--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,7 +32,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest, black
+          pip install pytest black
       - name: Test with pytest
         run: |
           python -m pytest
+      - name: Format with black
+        run: |
+          python -m black
